<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:background="@color/f_background_one">
            <com.h5c.careengage.designing.Calibri
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/standard_statistics"
                android:gravity="center"
                android:textColor="@color/recent_updates_color"/>
            <com.h5c.careengage.designing.Calibri
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/actual_statistics"
                android:gravity="center"
                android:textColor="@color/f_text_color_two"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".9"
            android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".15"
                            android:background="@color/gray">
                                <com.h5c.careengage.designing.Calibri
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/s_height_a_height"
                                    android:gravity="center"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".85">
                                <include
                                    android:id="@+id/standard_Actual_height"
                                    layout="@layout/line_graph_layout"/>
                        </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5"
                    android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".15"
                            android:background="@color/gray">
                                <com.h5c.careengage.designing.Calibri
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/s_weight_a_weight"
                                    android:gravity="center"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".85">
                                <include
                                    android:id="@+id/standard_actual_weight"
                                    layout="@layout/line_graph_layout"/>
                        </LinearLayout>
                </LinearLayout>
        </LinearLayout>
</LinearLayout>