<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arow"/>
        <com.h5c.careengage.designing.Calibri
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Health Statistics"
            android:layout_below="@+id/ambulance_image"
            android:textColor="#fff"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="vertical">
        <com.h5c.careengage.designing.Calibri
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            android:text="@string/glucose_tracker"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight=".4">
            <com.h5c.careengage.designing.Calibri
                android:layout_width="13dp"
                android:layout_height="wrap_content"
                android:text="GLUCOSE"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:layout_marginLeft="10dp"
                android:background="@color/glucose_text_background"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
            </lecho.lib.hellocharts.view.LineChartView>
        </LinearLayout>
        <com.h5c.careengage.designing.Calibri
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/dark_gray_glucose"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="vertical">
        <com.h5c.careengage.designing.Calibri
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            android:text="@string/blood_pressure"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">
            <com.h5c.careengage.designing.Calibri
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diastolic_bp"
                android:textColor="@color/bp_red_color"/>
            <com.h5c.careengage.designing.Calibri
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/systolic_bp"
                android:textColor="@color/bp_aqu_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight=".4">
            <com.h5c.careengage.designing.Calibri
                android:layout_width="13dp"
                android:layout_height="wrap_content"
                android:text="BPCOUNT"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:layout_marginLeft="10dp"
                android:background="@color/blood_pressure_text_background"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/bp_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
            </lecho.lib.hellocharts.view.LineChartView>
        </LinearLayout>
        <com.h5c.careengage.designing.Calibri
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/dark_gray_glucose"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</LinearLayout>